chore(plugin): remove latex support (untested)

--- a/plugins_ft.toml
+++ b/plugins_ft.toml
@@ -39,9 +39,9 @@ on_ft = ['xml','html']
 
 # Latex
 
-[[plugins]]
-repo  = 'lervag/vimtex'
-on_ft = 'tex'
+# [[plugins]]
+# repo  = 'lervag/vimtex'
+# on_ft = 'tex'
 
 # Markdown
 
